--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,2 @@
-hg+https://bitbucket.org/Surgo/blockdiag
-sphinxcontrib-blockdiag==1.1.1
-sphinxcontrib-bibtex==0.2.6
-numpy>=1.8
-scipy>=0.16
-matplotlib
-six>=1.4.1
-pandas
-tabulate
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0rc1
