--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,6 +1,9 @@
 name: Publish package to PyPi
 
-on: [push, workflow_call]
+on:
+  release:
+    types: [published]
+  workflow_dispatch:
 
 jobs:
   test:
