--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -4,7 +4,7 @@ on: [workflow_call]
 
 jobs:
   build:
-    name: Build distribution 📦
+    name: Build distribution
     runs-on: ubuntu-latest
 
     steps:
