chore: Disable push trigger for publishing package to TestPyPi workflow

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,10 +1,9 @@
 name: Publish package to TestPyPi
 
 on:
-  push:
-    # disable for tests
-    # branches:
-    #   - 'main'
+  # push:
+  #   branches:
+  #     - 'main'
   workflow_dispatch:
 
 jobs:
