--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/acoustic-tools
+      url: https://pypi.org/p/acoustic-toolbox
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
     steps:
