--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "numpy>=2.0.1",
+    "scipy>=1.14.0",
+    "matplotlib>=3.9.1",
+    "six>=1.16.0",
+    "pandas>=2.2.2",
+    "tabulate>=0.9.0",
+    "pysoundfile>=0.9.0.post1",
 ]
 
 [project.license]
@@ -24,6 +31,18 @@ file = "LICENSE"
 [project.urls]
 "Homepage" = "https://github.com/Universite-Gustave-Eiffel/acoustic-toolbox"
 "Bug Tracker" = "https://github.com/Universite-Gustave-Eiffel/acoustic-toolbox/issues"
+
+[project.optional-dependencies]
+docs = [
+    "mkdocs-material>=9.5.30",
+    "mkdocs>=1.6.0",
+    "mkdocstrings[python]>=0.25.2",
+    "nbconvert>=7.16.4",
+    "black>=24.4.2",
+]
+test = [
+    "pytest>=8.3.2",
+]
 
 [tool.flit.sdist]
 include = ["tests/"]
