--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,11 @@ file = "LICENSE"
 
 [project.optional-dependencies]
 docs = [
-    "mkdocs-material>=9.5.30",
-    "mkdocs>=1.6.0",
-    "mkdocstrings[python]>=0.25.2",
-    "nbconvert>=7.16.4",
-    "black>=24.4.2",
+    "sphinx-rtd-theme==1.3.0rc1",
+    "sphinx>=1.6, <8",
+    "nbsphinx>=0.9.4",
+    "nbsphinx-link>=1.3.0",
+    "jupyter>=1.0.0",
 ]
 test = [
     "pytest>=8.3.2",
