--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "numpy>=2.0.1",
+    "scipy>=1.14.0",
+    "matplotlib>=3.9.1",
+    "six>=1.16.0",
+    "pandas>=2.2.2",
+    "tabulate>=0.9.0",
+    "pysoundfile>=0.9.0.post1",
 ]
 
 [project.license]
@@ -24,6 +31,18 @@ file = "LICENSE"
 [project.urls]
 "Homepage" = "https://github.com/Universite-Gustave-Eiffel/acoustic-toolbox"
 "Bug Tracker" = "https://github.com/Universite-Gustave-Eiffel/acoustic-toolbox/issues"
+
+[project.optional-dependencies]
+docs = [
+    "sphinx-rtd-theme==1.3.0rc1",
+    "sphinx>=1.6, <8",
+    "nbsphinx>=0.9.4",
+    "nbsphinx-link>=1.3.0",
+    "jupyter>=1.0.0",
+]
+test = [
+    "pytest>=8.3.2",
+]
 
 [tool.flit.sdist]
 include = ["tests/"]
