--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,9 @@ test = [
 
 [tool.flit.sdist]
 include = ["tests/"]
+
+[tool.rye]
+dev-dependencies = [
+    "ruff>=0.5.5",
+    "pytest>=8.3.2",
+]
