--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "numpy>=2.0.1",
+    "numpy>=1.8",
     "scipy>=1.14.0",
     "matplotlib>=3.9.1",
     "six>=1.16.0",
@@ -40,14 +40,12 @@ docs = [
     "nbsphinx-link>=1.3.0",
     "jupyter>=1.0.0",
 ]
-test = [
-    "pytest>=8.3.2",
-]
 
 [tool.flit.sdist]
 include = ["tests/"]
 
 [tool.rye]
+universal = true
 dev-dependencies = [
     "ruff>=0.5.5",
     "pytest>=8.3.2",
