switch pyproject.toml to uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,12 @@ docs = [
 [tool.flit.sdist]
 include = ["tests/"]
 
-[tool.rye]
-universal = true
+[tool.uv]
 dev-dependencies = [
     "ruff>=0.5.5",
     "pytest>=8.3.2",
     "coverage>=7.6.0",
 ]
+
+[tool.uv.pip]
+universal = true
