--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,16 +3,16 @@ version: "2"
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.10"
+    python: "3.12"
   apt_packages:
     - graphviz
-
-python:
-  install:
-    - requirements: docs/requirements.txt
-    # Install our python package before building the docs
-    - method: pip
-      path: .
+  commands:
+#   Following documentation at https://docs.readthedocs.io/en/latest/build-customization.html#install-dependencies-with-uv
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - uv sync --extra docs --frozen
+    - uv run -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs $READTHEDOCS_OUTPUT/html
 
 sphinx:
   configuration: docs/source/conf.py
