--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,11 @@ docs = [
     "nbsphinx>=0.9.4",
     "nbsphinx-link>=1.3.0",
     "jupyter>=1.0.0",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.5.9",
+    "mkdocs-include-markdown-plugin>=6.0.4",
+    "mkdocs-exclude>=1.0.2",
+    "mkdocs-macros-plugin>=1.0.4",
 ]
 
 [tool.flit.sdist]
