--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,4 @@
-version: "2"
+version: 2
 
 build:
   os: "ubuntu-22.04"
@@ -6,13 +6,13 @@ build:
     python: "3.12"
   apt_packages:
     - graphviz
-  commands:
-#   Following documentation at https://docs.readthedocs.io/en/latest/build-customization.html#install-dependencies-with-uv
-    - asdf plugin add uv
-    - asdf install uv latest
-    - asdf global uv latest
-    - uv sync --extra docs --frozen
-    - uv run -m sphinx -T -b html -d docs/build/source -D language=en docs $READTHEDOCS_OUTPUT/html
+  jobs:
+    post_create_environment:
+      - curl -LsSf https://astral.sh/uv/install.sh | sh
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH $HOME/.cargo/bin/uv pip install --upgrade pip setuptools
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH $HOME/.cargo/bin/uv pip install --upgrade sphinx readthedocs-sphinx-ext
+    post_install:
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH $HOME/.cargo/bin/uv pip install .[docs]
 
 sphinx:
   configuration: docs/source/conf.py
