rearrange docs nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -171,7 +171,28 @@ not_in_nav: |
 # Page tree
 nav:
   - Home: index.md
-  - Signal: _signal.md
+  - Signal Class: _signal.md
+  - Modules:
+      - Ambisonics: ambisonics.md
+      - Atmosphere: atmosphere.md
+      - Bands: bands.md
+      - Building: building.md
+      - Cepstrum: cepstrum.md
+      - Criterion: criterion.md
+      - Decibel: decibel.md
+      - Descriptors: descriptors.md
+      - Directivity: directivity.md
+      - Doppler: doppler.md
+      - Generator: generator.md
+      - Imaging: imaging.md
+      - Octave: octave.md
+      - Power: power.md
+      - Quantity: quantity.md
+      - Reflection: reflection.md
+      - Room Acoustics: room.md
+      - Signal Processing: signal.md
+      - Utilities: utils.md
+      - Weighting: weighting.md
   - Standards:
       - Overview: standards.md
       - IEC 61260-1:2014: standards/iec_61260_1_2014.md
@@ -181,24 +202,3 @@ nav:
       - ISO 1996-2:2007: standards/iso_1996_2_2007.md
       - ISO 9613-1:1993: standards/iso_9613_1_1993.md
       - ISO/TR 25417:2007: standards/iso_tr_25417_2007.md
-  - Modules:
-      - Ambisonics: ambisonics.md
-      - Signal Processing: signal.md
-      - Room Acoustics: room.md
-      - Utilities: utils.md
-      - Weighting: weighting.md
-      - Reflection: reflection.md
-      - Doppler: doppler.md
-      - Generator: generator.md
-      - Imaging: imaging.md
-      - Octave: octave.md
-      - Power: power.md
-      - Quantity: quantity.md
-      - Cepstrum: cepstrum.md
-      - Criterion: criterion.md
-      - Decibel: decibel.md
-      - Descriptors: descriptors.md
-      - Directivity: directivity.md
-      - Atmosphere: atmosphere.md
-      - Bands: bands.md
-      - Building: building.md
