--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,6 @@ file = "LICENSE"
 
 [project.optional-dependencies]
 docs = [
-    "sphinx-rtd-theme==1.3.0rc1",
-    "sphinx>=1.6, <8",
-    "nbsphinx>=0.9.4",
-    "nbsphinx-link>=1.3.0",
     "jupyter>=1.0.0",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.5.9",
@@ -46,6 +42,7 @@ docs = [
     "mkdocs-exclude>=1.0.2",
     "mkdocs-macros-plugin>=1.0.4",
     "mkdocstrings[python]>=0.26.2",
+    "mkdocs-jupyter>=0.25.1",
 ]
 
 [tool.flit.sdist]
