--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,19 +4,23 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.12"
-  apt_packages:
-    - graphviz
+  # apt_packages:
+  #   - graphviz
   jobs:
-    post_create_environment:
-      - curl -LsSf https://astral.sh/uv/install.sh | sh
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH $HOME/.cargo/bin/uv pip install --upgrade pip setuptools
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH $HOME/.cargo/bin/uv pip install --upgrade sphinx readthedocs-sphinx-ext
-    post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH $HOME/.cargo/bin/uv pip install .[docs]
+    create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+      - uv venv
+    install:
+      - uv pip install .[docs]
 
-sphinx:
-  configuration: docs/source/conf.py
-  fail_on_warning: false
+    build:
+      html:
+        - NO_COLOR=1 uv run mkdocs build --strict --site-dir $READTHEDOCS_OUTPUT/html
+
+mkdocs:
+  configuration: mkdocs.yml
   
 formats:
   - pdf
