--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,9 @@ plugins:
       include_source: True
   - autorefs:
       resolve_closest: true
+  - api-autonav:
+      modules: ['acoustic_toolbox']
+      nav_section_title: "API Reference"
   - mkdocstrings: # For building API ref from docstrings https://mkdocstrings.github.io/usage/#docsmy_pagemd
       enable_inventory: true
       handlers:
@@ -181,34 +184,35 @@ nav:
     - Directivity: examples/directivity_example.ipynb
     - Octave: examples/example_octave.py
     - Signal Processing: examples/example_signal.py
-  - Signal Class: _signal.md
-  - Modules:
-      - Ambisonics: ambisonics.md
-      - Atmosphere: atmosphere.md
-      - Bands: bands.md
-      - Building: building.md
-      - Cepstrum: cepstrum.md
-      - Criterion: criterion.md
-      - Decibel: decibel.md
-      - Descriptors: descriptors.md
-      - Directivity: directivity.md
-      - Doppler: doppler.md
-      - Generator: generator.md
-      - Imaging: imaging.md
-      - Octave: octave.md
-      - Power: power.md
-      - Quantity: quantity.md
-      - Reflection: reflection.md
-      - Room Acoustics: room.md
-      - Signal Processing: signal.md
-      - Utilities: utils.md
-      - Weighting: weighting.md
-  - Standards:
-      - Standards Overview: standards.md
-      - IEC 61260-1:2014: standards/iec_61260_1_2014.md
-      - IEC 61672-1:2013: standards/iec_61672_1_2013.md
-      - ISO 1683:2015: standards/iso_1683_2015.md
-      - ISO 1996-1:2003: standards/iso_1996_1_2003.md
-      - ISO 1996-2:2007: standards/iso_1996_2_2007.md
-      - ISO 9613-1:1993: standards/iso_9613_1_1993.md
-      - ISO/TR 25417:2007: standards/iso_tr_25417_2007.md
+  - "API Reference"
+  # - Signal Class: _signal.md
+  # - Modules:
+  #     - Ambisonics: ambisonics.md
+  #     - Atmosphere: atmosphere.md
+  #     - Bands: bands.md
+  #     - Building: building.md
+  #     - Cepstrum: cepstrum.md
+  #     - Criterion: criterion.md
+  #     - Decibel: decibel.md
+  #     - Descriptors: descriptors.md
+  #     - Directivity: directivity.md
+  #     - Doppler: doppler.md
+  #     - Generator: generator.md
+  #     - Imaging: imaging.md
+  #     - Octave: octave.md
+  #     - Power: power.md
+  #     - Quantity: quantity.md
+  #     - Reflection: reflection.md
+  #     - Room Acoustics: room.md
+  #     - Signal Processing: signal.md
+  #     - Utilities: utils.md
+  #     - Weighting: weighting.md
+  # - Standards:
+  #     - Standards Overview: standards.md
+  #     - IEC 61260-1:2014: standards/iec_61260_1_2014.md
+  #     - IEC 61672-1:2013: standards/iec_61672_1_2013.md
+  #     - ISO 1683:2015: standards/iso_1683_2015.md
+  #     - ISO 1996-1:2003: standards/iso_1996_1_2003.md
+  #     - ISO 1996-2:2007: standards/iso_1996_2_2007.md
+  #     - ISO 9613-1:1993: standards/iso_9613_1_1993.md
+  #     - ISO/TR 25417:2007: standards/iso_tr_25417_2007.md
