--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "acoustic-toolbox"
-version = "0.1.2-dev1"
+version = "0.1.2-rc1"
 authors = [
     { name = "Valentin LE BESCOND", email = "valentin.lebescond@univ-eiffel.fr" },
-    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk"}
+    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk" },
 ]
 description = "Acoustic Toolbox module for Python."
 readme = "README.md"
@@ -77,4 +77,3 @@ universal = true
 [[tool.mypy.overrides]]
 module = ["scipy.*", "pyfftw.*", "pandas.*"]
 follow_untyped_imports = true
-
