--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 description = "Acoustic Toolbox module for Python."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
@@ -24,6 +24,7 @@ dependencies = [
     "pandas>=2.2.2",
     "tabulate>=0.9.0",
     "pysoundfile>=0.9.0.post1",
+    "pyoctaveband>=1.1.3",
 ]
 
 [project.license]
