--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "tabulate>=0.9.0",
     "pysoundfile>=0.9.0.post1",
     "pyoctaveband>=1.1.3",
+    "numba>=0.59.0",
 ]
 
 [project.license]
