--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "acoustic-toolbox"
-version = "0.1.2"
+version = "0.2.0"
 authors = [
-    { name = "Valentin LE BESCOND", email = "valentin.lebescond@univ-eiffel.fr" },
-    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk" },
+    { name = "Valentin LE BESCOND" },
+    { name = "Andrew Mitchell" },
 ]
 description = "Acoustic Toolbox module for Python."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
@@ -24,6 +24,8 @@ dependencies = [
     "pandas>=2.2.2",
     "tabulate>=0.9.0",
     "pysoundfile>=0.9.0.post1",
+    "pyoctaveband>=1.1.3",
+    "numba>=0.59.0",
 ]
 
 [project.license]
@@ -51,8 +53,8 @@ include = ["tests/"]
 # per https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
 exclude = ["*.wav"]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ruff>=0.5.5",
     "pytest>=8.3.2",
     "mypy>=1.15.0",
